# voroffset

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/cli2d/: CMakeLists.txt  offset2d.cpp
app/cli3d/: CMakeLists.txt  offset3d.cpp
cmake/: SetWarnings.cmake  VoroffsetDependencies.cmake  VoroffsetDownloadExternal.cmake  geogram.cmake
scripts/: README.md  fig19.sh  morph.json
src/vor2d/: CMakeLists.txt  Common.cpp  Common.h  CompressedImage.cpp  CompressedImage.h  Dexelize.cpp  Dexelize.h  DistanceTransform.cpp  DistanceTransform.h  DoubleCompressedImage.cpp  DoubleCompressedImage.h  DoubleVoronoi.cpp  DoubleVoronoi.h  Image.h  MorphologyOperators.cpp  MorphologyOperators.h  Voronoi.cpp  Voronoi.h
src/vor3d/: CMakeLists.txt  Common.cpp  Common.h  CompressedVolume.cpp  CompressedVolume.h  CompressedVolumeBase.cpp  CompressedVolumeBase.h  CompressedVolumeWithRadii.cpp  CompressedVolumeWithRadii.h  Dexelize.cpp  Dexelize.h  HalfDilationOperator.cpp  HalfDilationOperator.h  HalfDilationOperator.hpp  Morpho2D.cpp  Morpho2D.h  MorphologyOperators.cpp  MorphologyOperators.h  MorphologyOperators.hpp  SeparatePower2D.cpp  SeparatePower2D.h  Timer.cpp  Timer.h  Voronoi.cpp  Voronoi.h  Voronoi2D.cpp  Voronoi2D.h  VoronoiBruteForce.cpp  VoronoiBruteForce.h  VoronoiVorPower.cpp  VoronoiVorPower.h
